feat(albums): added album creation, list, display
